# cluster-delegator

./: .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  LICENSE  README  README.md  index.html  install.sh
.install/: amalgamate.py  amalgamate.sh  boost.sh  parse.sh
docs/: delegator.html  index.asc  script.sh
examples/: CMakeLists.txt  README  example1.cpp  example2.cpp  helloworld.cpp  makefile  skeleton.cpp
include/: cluster-delegator.h  cluster-delegator.hpp
include/boost/serialization/: unordered_map.hpp  unordered_set.hpp
include/delegator/: Communicator.h  Communicator.hpp  Coordinator_Worker_Process.h  Coordinator_Worker_Process.hpp  Coordinator_Worker_Scheme.h  Coordinator_Worker_Scheme.hpp  Message.h  Message.hpp  delegator.h  delegator.hpp
source/: CMakeLists.txt  cluster-delegator.cpp
